--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "mineflayer": "^3.9.0"
   },
   "devDependencies": {
-    "@types/node": "^16.6.1"
+    "@types/node": "^16.6.1",
+    "@typescript-eslint/eslint-plugin": "^4.29.2",
+    "@typescript-eslint/parser": "^4.29.2",
+    "eslint": "^7.32.0"
   }
 }
