--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "willocn",
   "license": "GPL-3.0-or-later",
   "dependencies": {
+    "chalk": "^4.1.2",
     "minecraft-protocol": "^1.26.1",
     "mineflayer": "^3.9.0",
     "sharp": "^0.29.0",
